--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <table width="100%" height="100%">
         <tr>
             <td align="center">
-               <img src="images/1.png" alt="file">
+<!--               <img src="images/1.png" alt="file">-->
                <h2 align="center">Hello World</h2>
-               <p>I'm hosted with GitHub Pages.</p>
+<!--               <p>I'm hosted with GitHub Pages.</p>-->
             </td>
         </tr>
     </table>
