--- a/index.html
+++ b/index.html
@@ -2,15 +2,8 @@
 <html>
 <body>
 
-    <table width="100%" height="100%">
-        <tr>
-            <td align="center">
-<!--               <img src="images/1.png" alt="file">-->
-               <h2 align="center">Hello World</h2>
-<!--               <p>I'm hosted with GitHub Pages.</p>-->
-            </td>
-        </tr>
-    </table>
-
+На улучшение качества стримов <br>
+59 / 1999
+    
 </body>
 </html>
